# open3d_cpp_python

./: .gitignore  000000.ply  CMakeLists.txt  CustomDrawGeometries.hpp  PlaneSegmentation.cpp  README.md  TestVisualizer.cpp  custom_draw_geometries.py  interactive_plane_segmentation.ipynb  open3d_jupyter_draw_geometries.py  plane_segmentation.ipynb
